图片本地化

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <!-- S 服务首页-->
         <section data-state="works2012" data-background="#000">
             <section>
-                <img src="http://wuxiaodi.com/tsj/img/work6-1.jpg" alt="服务首页"/>
+                <img src="/img/work6-1.jpg" alt="服务首页"/>
             </section>
             <section>
                 <h3>服务首页</h3>
@@ -174,7 +174,7 @@
         <!-- S Abtest-->
         <section data-state="works2011" data-background="#000">
             <section>
-                <img src="http://wuxiaodi.com/tsj/img/work1-1.jpg" alt="ABtest后台配置页面"/>
+                <img src="/img/work1-1.jpg" alt="ABtest后台配置页面"/>
             </section>
             <section>
                 <h3>ABtest</h3>
@@ -188,10 +188,10 @@
         <!-- S 前端质量平台 -->
         <section data-state="works2011" data-background="#000">
             <section>
-                <img src="http://wuxiaodi.com/tsj/img/work2-1.jpg" alt="前端质量平台" />
+                <img src="/img/work2-1.jpg" alt="前端质量平台" />
             </section>
             <section>
-                <img src="http://wuxiaodi.com/tsj/img/work2-2.jpg" alt="前端质量平台" />
+                <img src="/img/work2-2.jpg" alt="前端质量平台" />
             </section>
             <section>
                 <h3>前端质量平台</h3>
@@ -204,19 +204,19 @@
         <!-- S 宝藏网 -->
         <section data-state="works2010" data-background="#000">
             <section>
-                <img src="http://wuxiaodi.com/tsj/img/work3-1.jpg" alt="宝藏网"/>
+                <img src="/img/work3-1.jpg" alt="宝藏网"/>
             </section>
             <section>
-                <img src="http://wuxiaodi.com/tsj/img/work3-2.jpg" alt="宝藏网"/>
+                <img src="/img/work3-2.jpg" alt="宝藏网"/>
             </section>
             <section>
-                <img src="http://wuxiaodi.com/tsj/img/work3-3.jpg" alt="宝藏网"/>
+                <img src="/img/work3-3.jpg" alt="宝藏网"/>
             </section>
             <section>
-                <img src="http://wuxiaodi.com/tsj/img/work3-4.jpg" alt="宝藏网"/>
+                <img src="/img/work3-4.jpg" alt="宝藏网"/>
             </section>
             <section>
-                <img src="http://wuxiaodi.com/tsj/img/work3-5.jpg" alt="宝藏网"/>
+                <img src="/img/work3-5.jpg" alt="宝藏网"/>
             </section>
             <section>
                 <h3><a href="http://www.baozang.com/" target="_blank">宝藏网</a>10个频道彻底改版</h3>
@@ -237,7 +237,7 @@
         <!-- S 风雅颂扬 -->
         <section data-state="works2010" data-background="#000">
             <section>
-                <img src="http://wuxiaodi.com/tsj/img/work5-2.jpg" alt="风雅颂扬"/>
+                <img src="/img/work5-2.jpg" alt="风雅颂扬"/>
             </section>
             <section>
                 <h3><a href="http://www.fysy.com.cn/" target="_blank">风雅颂扬集团网站</a></h3>
