--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script type="text/javascript" src="https://a.alipayobjects.com/gallery/html5shiv/3.6.1/html5shiv.js"></script>
     <![endif]-->
-    <script type="text/javascript" charset="utf-8" src="/javascript/sea.js"></script>
+    <script type="text/javascript" charset="utf-8" src="javascript/sea.js"></script>
     <script>
         seajs.config({
             paths: {
@@ -122,13 +122,13 @@
                 </p>
             </section>
             <section>
-                <img src="/img/work9-2.jpg" alt="后台系统前端架构"/>
+                <img src="img/work9-2.jpg" alt="后台系统前端架构"/>
                 <p>
                    后台界面统一使用bootstrap3的交互规范，以bootstrap3为基础根据需求沉淀出符合后台业务界面的bizdev.css。
                 </p>
             </section>
             <section>
-                <img src="/img/work9-1.jpg" alt="后台系统前端架构"/>
+                <img src="img/work9-1.jpg" alt="后台系统前端架构"/>
                 <p>
                     bizdev.js是在使用seajs AMD规范在arale2组件之上做的一层封装，隐藏复杂API，使其绑定在jQuery和jQuery.fn上，将常用简易需求通过简单的方法调用就能实现。利用绑定在dom元素data-auto属性上的值去自动实现界面操作。对ajax做了初始化统一处理，统一数据传输格式，统一文案提示。我目前的工作是对其进行优化和发展，制定了它的发展原则，使其更能够符合后台业务需求，更方便后端开发同学开发前端功能。
                 </p>
@@ -138,10 +138,10 @@
         <!--S 长连接推送 -->
         <section data-state="works2013" data-background="#000">
             <section>
-                <img src="/img/work7-1.jpg" alt="长连接推送"/>
+                <img src="img/work7-1.jpg" alt="长连接推送"/>
             </section>
             <section>
-                <img src="/img/work7-2.jpg" alt="长连接推送"/>
+                <img src="img/work7-2.jpg" alt="长连接推送"/>
             </section>
             <section>
                 <h3>小宝游侠长连接推送</h3>
@@ -152,7 +152,7 @@
         <!-- S 商满小计-->
         <section data-state="works2013" data-background="#000">
             <section>
-                <img src="/img/work8-1.jpg" alt="商满小计"/>
+                <img src="img/work8-1.jpg" alt="商满小计"/>
             </section>
             <section>
                 <h3>商满小计</h3>
@@ -163,7 +163,7 @@
         <!-- S 服务首页-->
         <section data-state="works2012" data-background="#000">
             <section>
-                <img src="/img/work6-1.jpg" alt="服务首页"/>
+                <img src="img/work6-1.jpg" alt="服务首页"/>
             </section>
             <section>
                 <h3>服务首页</h3>
@@ -174,7 +174,7 @@
         <!-- S Abtest-->
         <section data-state="works2011" data-background="#000">
             <section>
-                <img src="/img/work1-1.jpg" alt="ABtest后台配置页面"/>
+                <img src="img/work1-1.jpg" alt="ABtest后台配置页面"/>
             </section>
             <section>
                 <h3>ABtest</h3>
@@ -188,10 +188,10 @@
         <!-- S 前端质量平台 -->
         <section data-state="works2011" data-background="#000">
             <section>
-                <img src="/img/work2-1.jpg" alt="前端质量平台" />
+                <img src="img/work2-1.jpg" alt="前端质量平台" />
             </section>
             <section>
-                <img src="/img/work2-2.jpg" alt="前端质量平台" />
+                <img src="img/work2-2.jpg" alt="前端质量平台" />
             </section>
             <section>
                 <h3>前端质量平台</h3>
@@ -204,19 +204,19 @@
         <!-- S 宝藏网 -->
         <section data-state="works2010" data-background="#000">
             <section>
-                <img src="/img/work3-1.jpg" alt="宝藏网"/>
+                <img src="img/work3-1.jpg" alt="宝藏网"/>
             </section>
             <section>
-                <img src="/img/work3-2.jpg" alt="宝藏网"/>
+                <img src="img/work3-2.jpg" alt="宝藏网"/>
             </section>
             <section>
-                <img src="/img/work3-3.jpg" alt="宝藏网"/>
+                <img src="img/work3-3.jpg" alt="宝藏网"/>
             </section>
             <section>
-                <img src="/img/work3-4.jpg" alt="宝藏网"/>
+                <img src="img/work3-4.jpg" alt="宝藏网"/>
             </section>
             <section>
-                <img src="/img/work3-5.jpg" alt="宝藏网"/>
+                <img src="img/work3-5.jpg" alt="宝藏网"/>
             </section>
             <section>
                 <h3><a href="http://www.baozang.com/" target="_blank">宝藏网</a>10个频道彻底改版</h3>
@@ -237,7 +237,7 @@
         <!-- S 风雅颂扬 -->
         <section data-state="works2010" data-background="#000">
             <section>
-                <img src="/img/work5-2.jpg" alt="风雅颂扬"/>
+                <img src="img/work5-2.jpg" alt="风雅颂扬"/>
             </section>
             <section>
                 <h3><a href="http://www.fysy.com.cn/" target="_blank">风雅颂扬集团网站</a></h3>
