--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <link href="/style/reveal.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="/style/style.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="style/reveal.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="style/style.css" media="all" rel="stylesheet" type="text/css" />
     <!--[if lt IE 9]>
     <script type="text/javascript" src="https://a.alipayobjects.com/gallery/html5shiv/3.6.1/html5shiv.js"></script>
     <![endif]-->
-    <script type="text/javascript" charset="utf-8" src="/javascript/sea.js"></script>
+    <script type="text/javascript" charset="utf-8" src="javascript/sea.js"></script>
     <script>
         seajs.config({
             paths: {
